# factortek_hubspot_api

./: bd_conexion.py  hb_api.py  main.py  pyproject.toml  readme.md  requirements.txt
